<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">MMBBSapp</string>
<string name="bt_eintellungen">Einstellungen
</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="bt_kontakt">Kontakt</string>
    <string name="bt_meineKlasse">meine Klasse</string>
<string name="bt_Anruf">Anruf Sekretariat</string>
    <string name="bt_Navigation">Navigation zur Schule</string>
    <string name="et_Name">Name</string>
    <string name="et_klasse">Klasse</string>
    <string name="et_email">mmbbs.eduplaza.de</string>
    <string name="kennwort">Kennwort</string>
    <string name="bt_stundenplan">Stundenplan</string>
    <string name="bt_vertretungsplan">Vertretungsplan</string>
    <string name="bt_kalender">Kalender</string>
    <string name="bt_email_schule">EMail an Schule</string>
<string name="bt_emailKlassenlehrer">Klassenlehrer</string>
    <string name="bt_emailKlasse">EMail an Klasse</string>
<string name="bt_Mitglieder">Mitglieder</string>
    <string name="tv_klassenbezeichnung">Klassenbezeichnung (z.B. FISI11A)</string>
    <string name="tv_emailadresse">Eduplaza EMail Adresse (z.B. Fisi11a.Mustermann@mmbbs.eduplaza.de)</string>
    <string name="tv_eduplazakennwort">Kennwort f. die eduplaza</string>
    <string name="tx_connecting">Verbindungsaufbau zur eduplaza</string>
    <string name="organisation">Organisation</string>
    <string name="lehrersuche">Lehrersuche</string>
    <string name="tv_textview">TextView</string>
    <string name="about_txt">MMBBS App V1.7 \n (c) 2011-2015\n developed by\nDr. Jörg Tuttas\nand members of the WPK\nSoftwareentwicklung\nfür\nmobile Endgeräte</string>
    <string name="btn_ok">OK</string>
    <string name="about_add">Liebe Schülerinnen und Schüler, sicherlich fragen Sie sich, warum hier Werbung erscheint? \n\nNun, die Einnahmen aus der Werbung werden im kommenden Jahr der IT-Fete gespendet. Also bitte hin und wieder mal auf die Werbung klicken, dass ist wie eine kleine Spende für die IT-Fete!</string>
    <string name="ads_text">Heute schon auf die Werbung geklickt?</string>
    <string name="new_version_txt">- mit 4Gewinnt Spiel\n- Bugfixes \n\n Beschwerden und Reklamation bitte via EMail an tuttas@mmbbs.de</string>
    <string name="version">V1.7</string>
    <string-array name="stundenplanliste">
        
        <item>Tabelle</item>
        <item>Liste</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Hallo">Hallo</string>
    <string name="send">send</string>
    <string name="login">Log in</string>
    <string name="username">user name</string>
    <string name="Password">Password</string>
    <string name="RetypePassword">retype Password</string>
    <string name="email">EMail</string>
    <string name="email_adress">EMail Address</string>
    <string name="resend">Resend</string>
    <string name="register">Register</string>
    <string name="location">Klasse</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string-array  name="country_arrays">
    <item>Afghanistan</item>
    <item>Albania</item>
    <item>Algeria</item>
    <item>American Samoa</item>
    <item>Andorra</item>
    <item>Angola</item>
    <item>Anguilla</item>
    <item>Antarctica</item>
    <item>Antigua and Barbuda</item>
    <item>Argentina</item>
    <item>Armenia</item>
    <item>Aruba</item>
    <item>Australia</item>
    <item>Austria</item>
    <item>Azerbaijan</item>
    <item>Bahrain</item>
    <item>Bangladesh</item>
    <item>Barbados</item>
    <item>Belarus</item>
    <item>Belgium</item>
    <item>Belize</item>
    <item>Benin</item>
    <item>Bermuda</item>
    <item>Bhutan</item>
    <item>Bolivia</item>
    <item>Bosnia and Herzegovina</item>
    <item>Botswana</item>
    <item>Bouvet Island</item>
    <item>Brazil</item>
    <item>British Indian Ocean Territory</item>
    <item>British Virgin Islands</item>
    <item>Brunei</item>
    <item>Bulgaria</item>
    <item>Burkina Faso</item>
    <item>Burundi</item>
    <item>Cambodia</item>
    <item>Cameroon</item>
    <item>Canada</item>
    <item>Cape Verde</item>
    <item>Cayman Islands</item>
    <item>Central African Republic</item>
    <item>Chad</item>
    <item>Chile</item>
    <item>China</item>
    <item>Christmas Island</item>
    <item>Cocos (Keeling) Islands</item>
    <item>Colombia</item>
    <item>Comoros</item>
    <item>Congo</item>
    <item>Cook Islands</item>
    <item>Costa Rica</item>
    <item>Cote d\'Ivoire</item>
    <item>Croatia</item>
    <item>Cuba</item>
    <item>Cyprus</item>
    <item>Czech Republic</item>
    <item>Democratic Republic of the Congo</item>
    <item>Denmark</item>
    <item>Djibouti</item>
    <item>Dominica</item>
    <item>Dominican Republic</item>
    <item>East Timor</item>
    <item>Ecuador</item>
    <item>Egypt</item>
    <item>El Salvador</item>
    <item>Equatorial Guinea</item>
    <item>Eritrea</item>
    <item>Estonia</item>
    <item>Ethiopia</item>
    <item>Faeroe Islands</item>
    <item>Falkland Islands</item>
    <item>Fiji</item>
    <item>Finland</item>
    <item>Former Yugoslav Republic of Macedonia</item>
    <item>France</item>
    <item>French Guiana</item>
    <item>French Polynesia</item>
    <item>French Southern Territories</item>
    <item>Gabon</item>
    <item>Georgia</item>
    <item>Germany</item>
    <item>Ghana</item>
    <item>Gibraltar</item>
    <item>Greece</item>
    <item>Greenland</item>
    <item>Grenada</item>
    <item>Guadeloupe</item>
    <item>Guam</item>
    <item>Guatemala</item>
    <item>Guinea</item>
    <item>Guinea-Bissau</item>
    <item>Guyana</item>
    <item>Haiti</item>
    <item>Heard Island and McDonald Islands</item>
    <item>Honduras</item>
    <item>Hong Kong</item>
    <item>Hungary</item>
    <item>Iceland</item>
    <item>India</item>
    <item>Indonesia</item>
    <item>Iran</item>
    <item>Iraq</item>
    <item>Ireland</item>
    <item>Israel</item>
    <item>Italy</item>
    <item>Jamaica</item>
    <item>Japan</item>
    <item>Jordan</item>
    <item>Kazakhstan</item>
    <item>Kenya</item>
    <item>Kiribati</item>
    <item>Kuwait</item>
    <item>Kyrgyzstan</item>
    <item>Laos</item>
    <item>Latvia</item>
    <item>Lebanon</item>
    <item>Lesotho</item>
    <item>Liberia</item>
    <item>Libya</item>
    <item>Liechtenstein</item>
    <item>Lithuania</item>
    <item>Luxembourg</item>
    <item>Macau</item>
    <item>Madagascar</item>
    <item>Malawi</item>
    <item>Malaysia</item>
    <item>Maldives</item>
    <item>Mali</item>
    <item>Malta</item>
    <item>Marshall Islands</item>
    <item>Martinique</item>
    <item>Mauritania</item>
    <item>Mauritius</item>
    <item>Mayotte</item>
    <item>Mexico</item>
    <item>Micronesia</item>
    <item>Moldova</item>
    <item>Monaco</item>
    <item>Mongolia</item>
    <item>Montenegro</item>
    <item>Montserrat</item>
    <item>Morocco</item>
    <item>Mozambique</item>
    <item>Myanmar</item>
    <item>Namibia</item>
    <item>Nauru</item>
    <item>Nepal</item>
    <item>Netherlands</item>
    <item>Netherlands Antilles</item>
    <item>New Caledonia</item>
    <item>New Zealand</item>
    <item>Nicaragua</item>
    <item>Niger</item>
    <item>Nigeria</item>
    <item>Niue</item>
    <item>Norfolk Island</item>
    <item>North Korea</item>
    <item>Northern Marianas</item>
    <item>Norway</item>
    <item>Oman</item>
    <item>Pakistan</item>
    <item>Palau</item>
    <item>Panama</item>
    <item>Papua New Guinea</item>
    <item>Paraguay</item>
    <item>Peru</item>
    <item>Philippines</item>
    <item>Pitcairn Islands</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Puerto Rico</item>
    <item>Qatar</item>
    <item>Reunion</item>
    <item>Romania</item>
    <item>Russia</item>
    <item>Rwanda</item>
    <item>Sqo Tome and Principe</item>
    <item>Saint Helena</item>
    <item>Saint Kitts and Nevis</item>
    <item>Saint Lucia</item>
    <item>Saint Pierre and Miquelon</item>
    <item>Saint Vincent and the Grenadines</item>
    <item>Samoa</item>
    <item>San Marino</item>
    <item>Saudi Arabia</item>
    <item>Senegal</item>
    <item>Serbia</item>
    <item>Seychelles</item>
    <item>Sierra Leone</item>
    <item>Singapore</item>
    <item>Slovakia</item>
    <item>Slovenia</item>
    <item>Solomon Islands</item>
    <item>Somalia</item>
    <item>South Africa</item>
    <item>South Georgia and the South Sandwich Islands</item>
    <item>South Korea</item>
    <item>South Sudan</item>
    <item>Spain</item>
    <item>Sri Lanka</item>
    <item>Sudan</item>
    <item>Suriname</item>
    <item>Svalbard and Jan Mayen</item>
    <item>Swaziland</item>
    <item>Sweden</item>
    <item>Switzerland</item>
    <item>Syria</item>
    <item>Taiwan</item>
    <item>Tajikistan</item>
    <item>Tanzania</item>
    <item>Thailand</item>
    <item>The Bahamas</item>
    <item>The Gambia</item>
    <item>Togo</item>
    <item>Tokelau</item>
    <item>Tonga</item>
    <item>Trinidad and Tobago</item>
    <item>Tunisia</item>
    <item>Turkey</item>
    <item>Turkmenistan</item>
    <item>Turks and Caicos Islands</item>
    <item>Tuvalu</item>
    <item>Virgin Islands</item>
    <item>Uganda</item>
    <item>Ukraine</item>
    <item>United Arab Emirates</item>
    <item>United Kingdom</item>
    <item>United States</item>
    <item>United States Minor Outlying Islands</item>
    <item>Uruguay</item>
    <item>Uzbekistan</item>
    <item>Vanuatu</item>
    <item>Vatican City</item>
    <item>Venezuela</item>
    <item>Vietnam</item>
    <item>Wallis and Futuna</item>
    <item>Western Sahara</item>
    <item>Yemen</item>
    <item>Yugoslavia</item>
    <item>Zambia</item>
    <item>Zimbabwe</item>
 </string-array>
        <string name="failed_connect">Failed to connect to the GameServer</string>
        <string name="reload">reload</string>
        <string name="connecting">Connecting....</string>
        <string name="connect_to_gameserver">Try to connect to Gameserver!</string>
        <string name="menu_login">Login</string>
        <string name="error_empty_username">Please select a user name!</string>
        <string name="error_empty_password">Please type in a password!</string>
        <string name="error_diff_password">The passwords differ!</string>
        <string name="error_empty_email">Please type in a valid email address!</string>
      <string name="menu_resend">Resend Login</string>
      <string name="menu_register">Register</string>
      <string name="resend_login">Resend Login</string>
      <string name="chat">Chat</string>
      <string name="request_player">"Request from "</string>
      <string name="request_to_player">"Request to "</string>
      <string name="request">"Request"</string>
      <string name="cancel">"Cancel"</string>
      <string name="ok">"OK"</string>
      <string name="name">Name</string>
      <string name="score">Score</string>
      <string name="games">Games</string>
      <string name="won">won</string>
      <string name="lost">lost</string>
      <string name="rank">Rank</string>
    <string name="player1">Spieler 1</string>
    <string name="player2">Spieler 2</string>
    <string name="start_game">Starte Spiel</string>
    <string name="cont_game">Spiel fortsätzen</string>
</resources>