<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_shape"
    android:orientation="vertical"
     >

	 <LinearLayout
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
             />
    
    	<TextView
    	    android:id="@+id/textView_msg_dialog"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:paddingLeft="10dp"
    	    android:paddingTop="25dp"
    	    android:layout_marginRight="15dp"
    	    android:textSize="20sp"
    	    android:textAlignment="center"
    	    android:text="@string/request_player"
    	    android:textColor="#ffffff" />

    </LinearLayout>
    
 	<LinearLayout
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_gravity="center"
    	android:layout_marginTop="20dp"
	     >

 		<Button
 		    android:id="@+id/button_positive"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:background="@drawable/button"
 		    android:layout_marginLeft="15dp"
 		    android:layout_marginRight="10dp"
 		    android:layout_marginBottom="10dp"
			android:padding="5dp"
 		    android:textColor="#ffffff"
 		    android:textSize="20sp"
 		    android:text="@string/ok" />
 		<Button
 		    android:id="@+id/button_negative"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:background="@drawable/button"
 		    android:textColor="#ffffff"
 		    android:textSize="20sp"
			android:padding="5dp"
 		    android:layout_marginLeft="10dp"
 		    android:layout_marginRight="15dp"
 		    android:layout_marginBottom="10dp"
 		    android:text="@string/cancel" />
 			
    </LinearLayout>

</LinearLayout>
